--- a/ca/index.html
+++ b/ca/index.html
@@ -6,14 +6,11 @@
 <link rel="stylesheet" type="text/css" href="../basicstyle.css"> 
 <link rel="stylesheet" type="text/css" href="../bookpages.css"> 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel=canonical href="https://www.jirka.org/ca/">
 <meta name="referrer" content="unsafe-url">
 <meta property="og:title" content="Guide to Cultivating Complex Analysis">
 <meta property="og:type" content="book">
 <meta property="og:book:author" content="Jiri Lebl">
-<meta property="og:url" content="https://www.jirka.org/ca/">
 <meta property="og:site_name" content="Guide to Cultivating Complex Analysis">
-<meta property="fb:admins" content="1360975208">
 <meta property="og:description" content="Free online mathematics textbook on complex analysis.">
 <script>
 MathJax = {
@@ -302,6 +299,13 @@ Yet another free textbook.  A bit less related ...
 <li>
 <a href="http://www.ebyte.it/library/refs/Refs_Math_Books.html">Math Books</a>
 </ul>
+
+<hr>
+This webpage is located at either
+<a href="https://www.jirka.org/ca/">https://www.jirka.org/ca/</a>
+or alternatively at
+<a href="https://jirilebl.github.io/ca/">https://jirilebl.github.io/ca/</a>.
+
 
 <div class=noprint>
 <hr>
