Use relative links

--- a/ca/changes.html
+++ b/ca/changes.html
@@ -24,7 +24,7 @@ MathJax = {
 <div class=thebody>
 
 <p class="nojustify left">
-<a href="https://www.jirka.org/ca/">[Back to the Guide to Cultivating Complex Analysis home page]</a>
+<a href=".">[Back to the Guide to Cultivating Complex Analysis home page]</a>
 
 <p>
 
