--- a/ca/index.html
+++ b/ca/index.html
@@ -274,7 +274,7 @@ same (that is, as long as you use at least one of the two licenses).
 <p>
 <ul class=nojustify>
 <li>
-<a href="https://www.jirka.org/scv/">Tasty Bits of Several Complex Variables</a>
+<a href="../scv/">Tasty Bits of Several Complex Variables</a>
 <br>
 A one-semester course on several complex variables.
 A good continuation of the present course.
