--- a/scv/index.html
+++ b/scv/index.html
@@ -271,6 +271,12 @@ Yet another free textbook of mine: undergraduate differential equations.  Not re
 </span>
 </ul>
 
+<hr>
+This webpage is located at either
+<a href="https://www.jirka.org/scv/">https://www.jirka.org/scv/</a>
+or alternatively at
+<a href="https://jirilebl.github.io/scv/">https://jirilebl.github.io/scv/</a>.
+
 <div class=noprint>
 <hr>
 <p>
