Add a bit of an index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,58 @@
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Ji&#345;&#237; Lebl's Github Homepage</title>
+<link rel="stylesheet" type="text/css" href="basicstyle.css"> 
+<link rel="stylesheet" type="text/css" href="bookpages.css"> 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="referrer" content="unsafe-url">
+<script>
+MathJax = {
+  output: {
+    font: 'mathjax-pagella'
+  }
+};
+</script>
+<script id="MathJax-script" async 
+ src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-svg-nofont.js"> 
+</script> 
+</head>
+
 <body>
-Nothing here so far.
+
+<div class=thebody>
+
+<h1>Ji&#345;&#237; Lebl's Github Homepage</h1>
+
+<p>
+This here website is where I put some mirrors of some of my book pages, just
+in case something happens to the main site.  Here's what's here so far:
+<ul class=nojustify>
+<li><span class=nojustify>
+<a href="../ca/">Guide to Cultivating Complex Analysis: Working the Complex Field</a>
+<br>
+A graduate one variable complex analysis course for incoming graduate students.
+This kind of a course is the prerequisite for this several variable complex analysis course.
+</span>
+<li><span class=nojustify>
+<a href="scv/">Tasty Bits of Several Complex Variables</a>
+<br>
+A one-semester course on several complex variables.
+A good continuation of the present course.
+</span>
+</ul>
+
+
+<div class=noprint>
+<hr>
+<p>
+<a href="http://validator.w3.org/check/referer"><img src="/images/valid-html5.png" alt="Valid HTML 5" style="border:0; width:88px; height:31px;"></a>
+<a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="/images/vcss.png" alt="Valid CSS!"></a>
+
+</div>
+
+</div>
+
 </body>
 </html>
