Add changes, errata, update pdf

--- a/diffyqs/errata.html
+++ b/diffyqs/errata.html
@@ -47,6 +47,12 @@ Of course, older editions
 suffer from recently discovered errata as well.
 
 <p>
+<b>December 11th 2025 edition (version 6.10):</b>
+<p>
+
+No known errata.
+
+<p>
 <b>August 6th 2025 edition (version 6.9):</b>
 <p>
 
