--- a/diffyqs/sage/sage-1.3.html
+++ b/diffyqs/sage/sage-1.3.html
@@ -25,7 +25,7 @@ sagecell.makeSagecell({"inputLocation": ".sageedit"});</script>
 <div class=thebody>
 
 <p class="nojustify left">
-[<a href="http://www.jirka.org/diffyqs/">Go to the Notes on Diffy Qs home page</a>]
+[<a href="..">Go to the Notes on Diffy Qs home page</a>]
 
 <h1>Notes on Diffy Qs - Sage demos for section 1.3</h1>
 
