--- a/diffyqs/changes.html
+++ b/diffyqs/changes.html
@@ -35,6 +35,8 @@ MathJax = {
 <b>December 11th 2025 edition, Version 6.10 (edition 6, 10th update):</b>
 <p>
 
+The main focus of this edition is polish, clarifications, and minor fixes as
+I taught with the book this semester.
 
 <ol>
 <li>Improved wording in the very beginning, making explicit
@@ -92,7 +94,7 @@ confuse with \(x .\)
 <li>In the discussion introducing the fundamental matrix, mention
 the nonuniqueness of the matrix, we can multiply on the right
 by an invertible constant matrix.
-<li>In exercise 3.5.102 use \(P\) for the matrix for more consistency.
+<li>In Exercise 3.5.102 use \(P\) for the matrix for more consistency.
 <li>Rename section 3.7 to "Repeated eigenvalues".
 <li>In 3.7, simplify the definition of geometric multiplicity and add a
 remark to the definition of "defect" as to its meaning.
