--- a/scv/errata.html
+++ b/scv/errata.html
@@ -64,6 +64,11 @@ just "domain".
 <li>On page 26, Exercise 1.2.14, definition of complex line through the
 origin should say that \(L\) should be nonzero or nonconstant.  However, the exercise is
 fine even with the flawed definition, just may be strange.
+<li>On page 43, Example 1.6.3, the gradient is \((2z_1,-2z_2) \) (the minus
+  sign is missing).  The conclusion is the same.
+<li>On page 44, Exercise 1.6.6, it should explicitly state that the dimension
+  \(n \geq 2 ,\) otherwise it's not true  (it's easy to forget to mention
+  this in a book on <em>several</em> complex variables :).
 <li>On page 113, at the bottom, the vector field \(X_k\) is given in the noncomplexified
 setting and so \(\frac{\partial}{\partial \omega}\) should be
 \(\frac{\partial}{\partial \bar{w}}.\)
