--- a/diffyqs/index.html
+++ b/diffyqs/index.html
@@ -159,7 +159,7 @@ href="http://www.mathworks.com">Matlab</a> (proprietary) and <a
 href="http://www.octave.org">Octave</a> (free).  The IODE website has several
 extra projects for the students to work through as homework. -->
 The graphs in the
-book were created using the <a href="../genius.html">Genius</a> software.
+book were created using the <a href="https://www.jirka.org/genius.html">Genius</a> software.
 
 <p>
 MAA published a 
@@ -297,7 +297,7 @@ they are both good quality.
 a copy on Amazon</a> for $25.00.
 This should be a little easier to buy and quicker/cheaper to ship than lulu, though it depends on where you live.
 This copy is
-the August 6th, 2025 revision (version 6.9).
+the December 11th, 2025 revision (version 6.10).
 <!--This one has an ISBN:-->
 <br>
 ISBN-13: 978-1706230236<br>
