--- a/diffyqs/adoption.html
+++ b/diffyqs/adoption.html
@@ -25,7 +25,7 @@
 
 
 <p>
-Here is a very incomplete list of of classroom adoptions (other than by me),
+Here is a very incomplete list of classroom adoptions (other than by me),
 where the book was/is used as the main text or one of the main texts.
 
 <p>
@@ -44,7 +44,7 @@ books for their online <a href="http://www.saylor.org/courses/ma221/">Math 221</
 Specific class use (very incomplete):
 
 <ul>
-<li>Prof. Dorothy Wallace, Darthmouth College, Math 23, Winter 2011.
+<li>Prof. Dorothy Wallace, Dartmouth College, Math 23, Winter 2011.
 <li>Prof. Jared Teague, University of Tennessee at Martin, Spring 2011.
 <li>Prof. John Noonan, Mount Vernon Nazarene University, Spring 2011.
 <li>Prof. Ziad Adwan, University of Texas at Brownsville, Fall 2011.
@@ -56,7 +56,7 @@ Specific class use (very incomplete):
 <li>Prof. Ian Zwiers, University of British Columbia, Math 265, Fall 2012.
 <li>Prof. Daniel Coombs, University of British Columbia, Math 265, Fall 2012.
 <li>Prof. Sarah Eichhorn, University of California, Irvine, Math 3D, Fall 2012.  <i>Standard book.</i>
-<li>Prof. David Webb, Darthmouth College, Math 23, Spring 2013.
+<li>Prof. David Webb, Dartmouth College, Math 23, Spring 2013.
 <li>Prof. Joseph Johnson, Mary Baldwin College, Math 306, Spring 2013.
 <li>Prof. Christopher Quarles, Everett Community College, MATH 261, Spring 2013.
 <li>Prof. Alex Acuna, Central New Mexico Community College, Math 2910, Spring 2013.
@@ -153,7 +153,7 @@ Specific class use (very incomplete):
 <li>Prof. John McClain, University of New Hampshire, MATH527, Fall 2018, Fall 2019, Spring 2023.
 <li>Prof. Nguyen Trung Hieu, Fulbright University Vietnam, MATH 201, Spring 2022, Spring 2023.
 <li>Prof. Robert Rostermundt, University of Colorado Denver, Math 3195, Summer 2023.
-<li>Prof. Longgfei Li, Kansas State University, MATH 340, Summer 2023.
+<li>Prof. Longfei Li, Kansas State University, MATH 340, Summer 2023.
 <li>Prof. Daniel Gagliardi, Clarkson University, MA232, Fall 2023.
 <li>Profs. Guanjun Pan, Nikolaos Voulgarakis, and Hong-Ming Yin, Washington State University, Math 315, Fall 2023.
 <li>Prof. Ruth Corran, The American University of Paris, MA3100, Spring 2022, Spring 2024.
@@ -173,7 +173,7 @@ Specific class use (very incomplete):
 <li>Prof. Travis Wolf, University of Mary, MAT 334, Spring 2015, Spring 2017, Spring 2019, Spring 2021, Spring 2025.
 <li>Prof. Manuel Caramés, Miami Dade College, MAP 2302, Fall 2024.
 <li>Prof. Hengrong Du, University of California, Irvine, Math 4D, Fall 2024 <i>Standard book</i>.
-<li>Prof. Jennifer Gonzalez-Zugasti, University of Massachusetts Lowell, MATH.2340, Spring 2021, Summer 2021, Spring 2022, Summer 2021, Fall 2022, Spring 2023, Fall 2023, Spring 2024, Fall 2024, Spring 2025.
+<li>Prof. Jennifer Gonzalez-Zugasti, University of Massachusetts Lowell, MATH.2340, Spring 2021, Summer 2021, Spring 2022, Summer 2022, Fall 2022, Spring 2023, Fall 2023, Spring 2024, Fall 2024, Spring 2025.
 <li>Prof. Suman Kundu, Kansas Wesleyan University, MATH 251, Spring 2025.
 <li>Prof. Alexander Kheifets, University of Massachusetts Lowell, MATH.2340, Spring 2025.
 <li>Prof. Mark Mills, Central College (Pella, IA), MATH-250-A, Spring 2025.
