--- a/diffyqs/errata.html
+++ b/diffyqs/errata.html
@@ -443,7 +443,7 @@ axis \(k-1\) times between the endpoints.
 <li>On the bottom of page 175 and the top of 176, the two eigenvectors must correspond to different eigenvalues.  The way it is stated would not work
 if \(A\) has repeated eigenvalues.
 <li>On page 334, At the bottom of the page it says to integrate from 0 to \(\omega_0,\) when that should be \(\theta_0\) (which is the integral we actually compute on the next page).
-<li>On page 342, in Poincarè-Bendixson, we say "spirals towards" which is not the right wording if in fact the periodic solution is just a non-spiraling
+<li>On page 342, in Poincaré-Bendixson, we say "spirals towards" which is not the right wording if in fact the periodic solution is just a non-spiraling
 critical point.  Better say "tends towards".  Just below the theorem
 we also forget to mention the possibility of a critical point.
 <li>On page 343, Example 8.4.3: the computation of \(\frac{\partial f}{\partial x}+ \frac{\partial g}{\partial y}\) is wrong, it is \(-2x+2y.\)  Therefore the two
