--- a/diffyqs/index.html
+++ b/diffyqs/index.html
@@ -237,7 +237,7 @@ var linktext = username + "@" + hostname;
 document.write("<a href='" + "mail" + "to:" + linktext + "'>" + linktext + "</a>");
 </script>)!
 The book was
-used, or is being used, at over a hundered
+used, or is being used, at over a hundred
 universities and colleges including Dartmouth Col&shy;lege, Uni&shy;ver&shy;si&shy;ty of Ten&shy;nessee, Uni&shy;ver&shy;si&shy;ty of To&shy;le&shy;do,
 Uni&shy;ver&shy;si&shy;ty of Bri&shy;tish Co&shy;lum&shy;bia, Uni&shy;ver&shy;si&shy;ty of Ca&shy;li&shy;for&shy;nia at Ir&shy;vine,
 Uni&shy;ver&shy;si&shy;ty of Ken&shy;tu&shy;cky, Uni&shy;ver&shy;si&shy;ty of Hawaii, and
@@ -513,8 +513,8 @@ The IODE website has several
 extra projects for the students to work through as homework.
 
 <p>
-Adam Spiegler of the University of Colorado Denver has put together a 
-<a href"https://aspiegler.github.io/Exploring-Differential-Equations/">a
+Adam Spiegler of the University of Colorado Denver has put together
+<a href="https://aspiegler.github.io/Exploring-Differential-Equations/">a
 suite of Jupyter notebooks</a> that are linked to various sections in
 this book and also in Trench's book.
 
