--- a/diffyqs/changes.html
+++ b/diffyqs/changes.html
@@ -48,7 +48,7 @@ on Wikipedia years ago.
 <li>Start the marking of Example 0.2.1 where we actually start the example.
 <li>Add more detail in solving for the \(C\) and \(k\) in Example 0.2.1.
 <li>Improve wording in the example discussing the initial conditions.
-<li><b>In Exercise 0.3.3</b> added the that \(a \not= 0\) to fix erratum.
+<li><b>In Exercise 0.3.3</b> add the condition \(a \not= 0\) to fix erratum.
 <li>In Example 1.1.4, give a second possible initial condition to illustrate
 the other possibility of the interval of definition.
 <li>Add a short explanation and example to the implicit solution example in
@@ -67,13 +67,13 @@ a couple of times in the text.
 a bit confusing.
 <li><b>In Exercise 1.7.2</b>, add assumption that the real solution is greater
 than the approximate ones, otherwise it's not really possible.
-<li>Remove the extraneous remark about the local nature of Poincare Lemma
+<li>Remove the extraneous remark about the local nature of Poincaré Lemma
 in 1.8, we cover this in Example 1.8.4 in more detail.  Then add a remark
 before Example 1.8.5
 about the case where the set has no holes such as the entire plane or the
 half-plane we just saw.
 <li>Add a footnote on the wording "equipotential curve" and add it to the index
-and add Poincare Lemma to the index as well.
+and add Poincaré Lemma to the index as well.
 <li>Emphasize the forms of the solutions in 2.2
 by boxing them to make them easy to pick out.
 <li>For the answers in the back for exercises in 2.4, make sure they all
@@ -136,7 +136,7 @@ add Judson's book to the Further Reading chapter.
 <b>August 6th 2025 edition, Version 6.9 (edition 6, 9th update):</b>
 <p>
 
-The main focus of this edition is to fix some long standing minor
+The main focus of this edition is to fix some long-standing minor
 issues and slightly improve sections not often used in classes.
 Moreover, this version fixes many errata found with the help of AI
 (AI was only used to identify the errors, no content was created by AI.
@@ -272,7 +272,7 @@ an enumerate to make it easier to parse.
 <b>December 19th 2024 edition, Version 6.8 (edition 6, 8th update):</b>
 <p>
 
-The focus of this new minor revision are fixing errors,
+The focus of this new minor revision is fixing errors,
 minor clarifications and improvements to exposition,
 and improvements/fixes to style and grammar.
 No numbers have changed.
@@ -285,7 +285,7 @@ constant.
 and \(u_t\) second and some vice-versa.  Order them all the same for
 consistency's sake, that is, \(u_x\) first.
 This includes the exercises 1.9.1, 1.9.2, 1.9.3, 1.9.6, and 1.9.101.
-(There is no change in content, it's just how its presented)
+(There is no change in content, it's just how it's presented)
 <li>In section 2.2, just before Theorem 2.2.1, mention that we are for the moment
 supposing that the roots are real.
 <li>In exercises 2.3.9, 2.3.10, 2.3.104, 2.3.105 change "find a linear combination that works."
@@ -349,7 +349,7 @@ explicitly say in
 English that there are 11.86 kg of salt in the tank when full.
 Also in the remark about concentration afterwards, write 0.1667 to approximate 1/6 to use the same
 number of decimal places as the concentration.
-<li>On page 58, add a displayed equations showing what the error is for
+<li>On page 58, add a displayed equation showing what the error is for
 clarity.
 <li>In 1.9, mention again the meaning \(u_x\) and \(u_t\) notation for
 partial derivatives.
@@ -396,7 +396,7 @@ resonance and makes computations easier anyhow.
 someone wonders what happened to the \(\frac{1}{t}\) counterexample.
 <li>In Example 6.1.7, add an intermediate step in computing the unshifted
 inverse transform.
-<li>In 6.2.1, we offhand make a remark about piecewise smooth functions,
+<li>In 6.2.1, we off-hand make a remark about piecewise smooth functions,
 but if the functions have discontinuities, then one would have to
 write a little bit more (the same procedure works, but does not get the same
 formula as we'd be missing the delta functions in the derivative).
@@ -413,7 +413,7 @@ piecewise functions.
 <li>Add Exercises 6.2.13 and 6.2.104 on transfer functions from input and
 output (this is similar to the exercise on the WeBWorK).
 <li>Add Exercise 6.2.14 for a periodic function.
-<li>Clean up wording for exerecises 6.2.12 and 6.2.103.
+<li>Clean up wording for exercises 6.2.12 and 6.2.103.
 <li>On page 309 add distributive law to the list of properties of
 convolution.
 <li>In Example 6.3.4 mention that \(\frac{1}{s^2+\omega_0^2}\) is
@@ -639,7 +639,7 @@ Here is a complete list of changes:
 
 <li>Use newpx (Palatino) fonts in the PDF version.  The line length has gotten slightly
   shorter to improve readability.
-<li>The pages are on the other hand sligtly longer to save paper.
+<li>The pages are on the other hand slightly longer to save paper.
 <li>Exercises with parts use the tasks package so they are not too cramped
   anymore.
 <li>Make bottom margin smaller to save paper.
