Add a few errata

--- a/scv/errata.html
+++ b/scv/errata.html
@@ -69,6 +69,20 @@ fine even with the flawed definition, just may be strange.
 <li>On page 44, Exercise 1.6.6, it should explicitly state that the dimension
   \(n \geq 2 ,\) otherwise it's not true  (it's easy to forget to mention
   this in a book on <em>several</em> complex variables :).
+<li>On page 46, it says "Jacobian derivative \(J_F\)" when it should say
+  "Jacobian determinant \(J_F\)".
+<li>On page 53, the \(s\) is a scalar so in inequality (2.1) the
+  power should
+  be \(|\alpha|\) not simply \(\alpha .\)  Though I suppose one could
+  plausibly interpret the argument as dealing with a multiradius
+  rather than just a number, in which case it would be correct.
+<li>On page 70, in the offhand remark about the Heisenberg group law,
+  the inner product should be the
+  Hermitian one, so either there is a bar missing on the \(z'\) or
+  the \(\langle , \rangle\) notation should be used.
+<li>On page 74, in equation (2.3), there is a 2 missing in front of the
+  \(i.\)  Same issue is in the next displayed equation.  Without it
+  there would be a factor of \(\frac{1}{2}\) on the right hand side.
 <li>On page 113, at the bottom, the vector field \(X_k\) is given in the noncomplexified
 setting and so \(\frac{\partial}{\partial \omega}\) should be
 \(\frac{\partial}{\partial \bar{w}}.\)
