Add some errata.

--- a/scv/errata.html
+++ b/scv/errata.html
@@ -59,11 +59,14 @@ just "domain".
 <li>On page 16, the parenthetical note about when the two orderings give
   opposite orientation is incorrect.  The determinant of the map taking
   one to the other is \((-1)^{n(n-1)/2} .\)  So not "for even \(n.\)"
-  <li>On page 20, in the power series expansion, the \(z_n^{k_2}\) should be a
+<li>On page 20, in the power series expansion, the \(z_n^{k_2}\) should be a
     \(z_2^{k_2} .\)
 <li>On page 26, Exercise 1.2.14, definition of complex line through the
 origin should say that \(L\) should be nonzero or nonconstant.  However, the exercise is
 fine even with the flawed definition, just may be strange.
+Also, by "countable" we really mean "countably infinite".  However
+countability is not key, just replace "countable" with "infinite" in both b
+and c.
 <li>On page 43, Example 1.6.3, the gradient is \((2z_1,-2z_2) \) (the minus
   sign is missing).  The conclusion is the same.
 <li>On page 44, Exercise 1.6.6, it should explicitly state that the dimension
@@ -83,6 +86,13 @@ fine even with the flawed definition, just may be strange.
 <li>On page 74, in equation (2.3), there is a 2 missing in front of the
   \(i.\)  Same issue is in the next displayed equation.  Without it
   there would be a factor of \(\frac{1}{2}\) on the right hand side.
+<li>On page 88, Exercise 2.4.26, part b) \(f_\epsilon(z)\) is
+    <em>increasing</em> in \(\epsilon,\) not decreasing.
+    It therefore decreases as \(\epsilon\) decreases.
+<li>On page 102, in the definition of <em>logarithmically convex</em>
+  the condition about the logarithms of the moduli of
+  \(z_j\) being in \(C\) only should be for those \(z\) where
+  none of the coordinates are zero of course.
 <li>On page 113, at the bottom, the vector field \(X_k\) is given in the noncomplexified
 setting and so \(\frac{\partial}{\partial \omega}\) should be
 \(\frac{\partial}{\partial \bar{w}}.\)
