--- a/scv/errata.html
+++ b/scv/errata.html
@@ -69,6 +69,8 @@ fine even with the flawed definition, just may be strange.
 <li>On page 44, Exercise 1.6.6, it should explicitly state that the dimension
   \(n \geq 2 ,\) otherwise it's not true  (it's easy to forget to mention
   this in a book on <em>several</em> complex variables :).
+<li>On page 110, in the proof of Proposition 3.1.10, \(f \circ g\) should be
+  \(g \circ f .\)  It is correct in the statement of the proposition.
 <li>On page 113, at the bottom, the vector field \(X_k\) is given in the noncomplexified
 setting and so \(\frac{\partial}{\partial \omega}\) should be
 \(\frac{\partial}{\partial \bar{w}}.\)
