--- a/scv/errata.html
+++ b/scv/errata.html
@@ -99,6 +99,9 @@ and c.
 setting and so \(\frac{\partial}{\partial \omega}\) should be
 \(\frac{\partial}{\partial \bar{w}}.\)
 That is the way it is applied.
+<li>On page 114, in the short example \(\operatorname{Im} w = |z|^2 \)
+  the expression \(\bar{\Phi}(z,\zeta,\Phi(z,\zeta,w))\) should be
+  \(\bar{\Phi}(\zeta,z,\Phi(z,\zeta,w)) .\)
 <li>On page 126, Theorem 3.4.1, the function \(f\) should be complex-valued, not real-valued.
 <li>On page 166, in Example 5.3.1, the constant in front of the computed Szego kernel is clearly \(\frac{1}{2\pi}\)
 and not \(\frac{1}{\pi}.\)  Also it should really say that the Szego kernel is a function of \(\bar{\zeta}\)
