--- a/scv/errata.html
+++ b/scv/errata.html
@@ -105,10 +105,8 @@ That is the way it is applied.
 <li>On page 126, Theorem 3.4.1, the function \(f\) should be complex-valued, not real-valued.
 <li>On page 127, the sum at the top goes to \(n-1,\) not \(n.\)  There is no
   \(z_n.\)
-<li>On page 128, Exercise 3.4.4 does not make sense as stated.  It says \(f\)
-  is a real-valued CR function (which would imply that it is constant on
-  \(M\)) and then that clearly attains a (nonstrict) maximum.  Remove the
-  "real-valued" and we ask that f cannot attain a "strict" maximum.
+<li>On page 128, Exercise 3.4.4 does not make sense as stated.
+  It should say "nonconstant" instead of "real-valued".
 <li>On page 166, in Example 5.3.1, the constant in front of the computed Szego kernel is clearly \(\frac{1}{2\pi}\)
 and not \(\frac{1}{\pi}.\)  Also it should really say that the Szego kernel is a function of \(\bar{\zeta}\)
 not \(\zeta .\)
