Add a couple of errata

--- a/scv/errata.html
+++ b/scv/errata.html
@@ -107,6 +107,10 @@ That is the way it is applied.
   \(z_n.\)
 <li>On page 128, Exercise 3.4.4 does not make sense as stated.
   It should say "nonconstant" instead of "real-valued".
+<li>On page 140, Exercise 4.4.11 has the incorrect conclusion.  What one
+  needs to prove is that \(H^{(0,1)}(U) \not= 0 .\)
+<li>On page 155, Exercise 4.6.5, the \(f\) to be found should be in
+  \(\mathcal{O}(U)\) not \(\mathcal{O}(M) .\)
 <li>On page 166, in Example 5.3.1, the constant in front of the computed Szego kernel is clearly \(\frac{1}{2\pi}\)
 and not \(\frac{1}{\pi}.\)  Also it should really say that the Szego kernel is a function of \(\bar{\zeta}\)
 not \(\zeta .\)
