--- a/scv/errata.html
+++ b/scv/errata.html
@@ -111,6 +111,8 @@ That is the way it is applied.
   needs to prove is that \(H^{(0,1)}(U) \not= 0 .\)
 <li>On page 155, Exercise 4.6.5, the \(f\) to be found should be in
   \(\mathcal{O}(U)\) not \(\mathcal{O}(M) .\)
+<li>On page 161, Exercise 5.2.3 part b), \(f\) needs to be not identically
+  zero.
 <li>On page 166, in Example 5.3.1, the constant in front of the computed Szego kernel is clearly \(\frac{1}{2\pi}\)
 and not \(\frac{1}{\pi}.\)  Also it should really say that the Szego kernel is a function of \(\bar{\zeta}\)
 not \(\zeta .\)
