--- a/scv/errata.html
+++ b/scv/errata.html
@@ -113,9 +113,12 @@ That is the way it is applied.
   \(\mathcal{O}(U)\) not \(\mathcal{O}(M) .\)
 <li>On page 161, Exercise 5.2.3 part b), \(f\) needs to be not identically
   zero.
+<li>On page 165, Exercise 5.3.1, should ask that the monomials are orthogonal,
+  not orthonormal, system.  
 <li>On page 166, in Example 5.3.1, the constant in front of the computed Szego kernel is clearly \(\frac{1}{2\pi}\)
 and not \(\frac{1}{\pi}.\)  Also it should really say that the Szego kernel is a function of \(\bar{\zeta}\)
 not \(\zeta .\)
+<li>On page 166, a couple of times \(S_U\) was simply written as \(S.\)
 <li>On page 206, in Proposition B.5, in the integral formula for \(c_k,\)
 the \(z\) should be \(p.\)
 <li>On page 213, there is a copy-paste error in Mergelyan's theorem.  The "and every compact
