Add a couple of errata

--- a/scv/errata.html
+++ b/scv/errata.html
@@ -119,6 +119,11 @@ That is the way it is applied.
 and not \(\frac{1}{\pi}.\)  Also it should really say that the Szego kernel is a function of \(\bar{\zeta}\)
 not \(\zeta .\)
 <li>On page 166, a couple of times \(S_U\) was simply written as \(S.\)
+<li>On page 178, when it says \(\Delta = b^2-4ac\) we really mean that that
+  \(\Delta\) would work, the one from the proof is up to a unit (in this case
+  \(-a^2 .\)
+<li>On page 179, when it says "the number of between..." it should say "the
+  number of zeros between".
 <li>On page 206, in Proposition B.5, in the integral formula for \(c_k,\)
 the \(z\) should be \(p.\)
 <li>On page 213, there is a copy-paste error in Mergelyan's theorem.  The "and every compact
