--- a/scv/errata.html
+++ b/scv/errata.html
@@ -135,6 +135,8 @@ not \(\zeta .\)
   In a related omission, the proof of 6.4.2 just above the exercise
   forgets to argue that the factors \(P_1,\ldots,P_k\) are
   Weierstrass to apply the exercise.
+<li>Page 187, proof of Lemma 6.5.10, the set that is made to be an open
+  subset of \({\mathbb{C}}^{n-1} \times \{ 0 \}\) is \(Z_f \cap W\) not \(W .\)
 <li>On page 206, in Proposition B.5, in the integral formula for \(c_k,\)
 the \(z\) should be \(p.\)
 <li>On page 213, there is a copy-paste error in Mergelyan's theorem.  The "and every compact
