--- a/scv/errata.html
+++ b/scv/errata.html
@@ -137,6 +137,11 @@ not \(\zeta .\)
   Weierstrass to apply the exercise.
 <li>Page 187, proof of Lemma 6.5.10, the set that is made to be an open
   subset of \({\mathbb{C}}^{n-1} \times \{ 0 \}\) is \(Z_f \cap W\) not \(W .\)
+<li>On page 196, Exercise 6.7.6 is not correct, the final expression
+  is overly simplified.
+<li>On page 197, Exercise 6.7.11 is not quote correct, there needs to
+  be an extra hypothesis on topology.  Easiest way to fix this is to
+  just assume the image of any neighborhood is a local variety.
 <li>On page 206, in Proposition B.5, in the integral formula for \(c_k,\)
 the \(z\) should be \(p.\)
 <li>On page 213, there is a copy-paste error in Mergelyan's theorem.  The "and every compact
