--- a/scv/errata.html
+++ b/scv/errata.html
@@ -142,6 +142,8 @@ not \(\zeta .\)
 <li>On page 197, Exercise 6.7.11 is not quote correct, there needs to
   be an extra hypothesis on topology.  Easiest way to fix this is to
   just assume the image of any neighborhood is a local variety.
+<li>On page 199, Exercise 6.8.4, the \(r(w,\bar{\zeta})\) should
+  read \(r(\zeta,\bar{z}) .\)
 <li>On page 206, in Proposition B.5, in the integral formula for \(c_k,\)
 the \(z\) should be \(p.\)
 <li>On page 213, there is a copy-paste error in Mergelyan's theorem.  The "and every compact
