--- a/scv/errata.html
+++ b/scv/errata.html
@@ -139,6 +139,9 @@ not \(\zeta .\)
   subset of \({\mathbb{C}}^{n-1} \times \{ 0 \}\) is \(Z_f \cap W\) not \(W .\)
 <li>On page 196, Exercise 6.7.6 is not correct, the final expression
   is overly simplified.
+<li>On page 196, Exercise 6.7.10 has an extraneous "modulus of" which would
+  be the right thing for holomorphic functions, but not for plurisubharmonic
+  functions.
 <li>On page 197, Exercise 6.7.11 is not quote correct, there needs to
   be an extra hypothesis on topology.  Easiest way to fix this is to
   just assume the image of any neighborhood is a local variety.
