Add some errata.

--- a/scv/errata.html
+++ b/scv/errata.html
@@ -147,10 +147,24 @@ not \(\zeta .\)
   just assume the image of any neighborhood is a local variety.
 <li>On page 199, Exercise 6.8.4, the \(r(w,\bar{\zeta})\) should
   read \(r(\zeta,\bar{z}) .\)
+<li>On page 204, on the second line of the long displayed equation the
+  second term in the integral should be 
+  \(g(\gamma(t))\overline{\gamma'(t)}\) rather than
+  \(f(\gamma(t))\overline{\gamma'(t)} .\)
 <li>On page 206, in Proposition B.5, in the integral formula for \(c_k,\)
 the \(z\) should be \(p.\)
+<li>On page 208, in part (i) of the inverse function theorem the prime is
+  forgotten on \((f^{-1})'(q) .\)
+<li>On page 212, in the comment after Rouche it says the classical inequality is
+  weaker, but it is the theorem that is weaker because the inequality is
+  stronger.
+<li>On page 213, in Picard's little theorem, the \(f\) should be nonconstant.
 <li>On page 213, there is a copy-paste error in Mergelyan's theorem.  The "and every compact
 \(K \subset \subset U\)" should be deleted.
+<li>On page 224, in the computation of \(d\omega\) near the bottom,
+  a factor of \((-1)^{k-1}\) is missing.  Same in the next line in the
+  integral.  In the second line of the integral it is correct again as
+  \(dx_k\) was again pulled to the front.
 <li>On page 225, in axiom (G4) in the definition of group, the \(0\) should be \(1\) as we are defining 
 a group in the multiplicative notation.
 </ol>
