Add a couple of errata

--- a/scv/errata.html
+++ b/scv/errata.html
@@ -162,11 +162,16 @@ the \(z\) should be \(p.\)
 <li>On page 213, there is a copy-paste error in Mergelyan's theorem.  The "and every compact
 \(K \subset \subset U\)" should be deleted.
 <li>On page 224, in the computation of \(d\omega\) near the bottom,
-  a factor of \((-1)^{k-1}\) is missing.  Same in the next line in the
-  integral.  In the second line of the integral it is correct again as
-  \(dx_k\) was again pulled to the front.
-<li>On page 225, in axiom (G4) in the definition of group, the \(0\) should be \(1\) as we are defining 
-a group in the multiplicative notation.
+  a factor of \((-1)^{k-1}\) is missing.  Same in the next computation,
+  though it disappears in the end.
+<li>On page 225,
+axioms (G3) and (G4) should include both orders,
+and in axiom (G4) in the definition of group, the \(0\) should be \(1.\)
+<li>On page 229, a measure is valued in \([0,\infty] .\)
+<li>On page 231, in dominated convergence theorem, the hypothesis should be
+  \(\sabs{f_n(x)} \leq g(x)\) (the subscript \(n\) is missing).
+<li>On page 233, Corollary E.2.3, it is not the union of half spaces, it is
+  the intersection of halfspaces.
 </ol>
 
 <p>
