--- a/scv/errata.html
+++ b/scv/errata.html
@@ -169,7 +169,7 @@ axioms (G3) and (G4) should include both orders,
 and in axiom (G4) in the definition of group, the \(0\) should be \(1.\)
 <li>On page 229, a measure is valued in \([0,\infty] .\)
 <li>On page 231, in dominated convergence theorem, the hypothesis should be
-  \(\sabs{f_n(x)} \leq g(x)\) (the subscript \(n\) is missing).
+  \(|f_n(x)| \leq g(x)\) (the subscript \(n\) is missing).
 <li>On page 233, Corollary E.2.3, it is not the union of half spaces, it is
   the intersection of halfspaces.
 </ol>
