--- a/scv/errata.html
+++ b/scv/errata.html
@@ -49,6 +49,12 @@ Of course, older editions
 may suffer from recently discovered errata as well.
 
 <p>
+<b>January 1st 2026 edition (version 4.3):</b>
+<p>
+
+No known errata.
+
+<p>
 <b>May 20th 2025 edition (version 4.2):</b>
 <p>
 
