--- a/scv/index.html
+++ b/scv/index.html
@@ -151,7 +151,7 @@ and 48 figures.
 <p>
 <a href="scv.pdf">Download the book as PDF</a>
 <br>
-(Version 4.2, May 20th, 2025, 248 pages)
+(Version 4.3, January 1st, 2026, 248 pages)
 
 <!--<p>
 As the exercise numbers have changed and you may want to consult
