A couple more changes

--- a/scv/changes.html
+++ b/scv/changes.html
@@ -35,7 +35,8 @@ MathJax = {
 <p>
 
 The focus of this revision is to fix errors and typos identified mostly with
-the help of AI.
+the help of AI.  Note that a number of exercises have been fixed and
+therefore necessarily changed.
 
 <ol>
 <li>In Exercise 1.2.14, clarify parts b and c.  Namely the point is that
@@ -198,7 +199,7 @@ Thanks to Richard Lärkäng for the suggestion.
 
 This is a major new edition with some new material and
 many smaller changes throughout.
-<b>Important: Exercise numberes may have changed!</b>.
+<b>Important: Exercise numbers may have changed!</b>.
 
 <p>
 Larger changes in general:
