--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@ MathJax = {
 
 <p>
 This here website is where I put some mirrors of some of my book pages, just
-in case something happens to the main site.  Here's what's here so far:
+in case something happens to the <a href="https://www.jirka.org">main site</a>.
+All these books are open source (freely available).
+Here's what's here so far:
 <ul class=nojustify>
 <li><span class=nojustify>
 <a href="diffyqs/">Notes on Diffy Qs: Differential Equations for Engineers</a>
 <br>
-Undergraduate differential equations textbook freely available online
-(and as a cheap paperback).
+Undergraduate differential equations textbook.
 </span>
 <li><span class=nojustify>
 <a href="ca/">Guide to Cultivating Complex Analysis: Working the Complex Field</a>
@@ -45,9 +46,16 @@ This kind of a course is the prerequisite for this several variable complex anal
 <a href="scv/">Tasty Bits of Several Complex Variables</a>
 <br>
 A one-semester course on several complex variables.
-A good continuation of the present course.
+A good continuation of the one-variable course above.
 </span>
 </ul>
+
+<p>
+The book that's not currently here yet is:
+<br>
+<a href="https://www.jirka.org/ra/">Basic Analysis: Introduction to Real Analysis</a>
+<br>
+A two-semester undergraduate course on basic real analysis.
 
 
 <div class=noprint>
