--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@ A good continuation of the one-variable course above.
 </ul>
 
 <p>
-The book that's not currently here yet is:
-<br>
-<a href="https://www.jirka.org/ra/">Basic Analysis: Introduction to Real Analysis</a>
+The book that's not yet mirrored here is:
+<ul class=nojustify>
+<li><a href="https://www.jirka.org/ra/">Basic Analysis: Introduction to Real Analysis</a>
 <br>
 A two-semester undergraduate course on basic real analysis.
+</ul>
 
 
 <div class=noprint>
