--- a/diffyqs/adoption.html
+++ b/diffyqs/adoption.html
@@ -181,8 +181,8 @@ Specific class use (very incomplete):
   Spring 2024, Fall 2024, Spring 2025, Fall 2025.
 <li>Prof. Matthew Morena, Christopher Newport University (Newport News, VA), MATH 247, Fall 2025.
 <li>Prof. Michael A. Karls, Ball State University (Muncie, IN), MATH 374-1, Fall 2025.
-<li>Prof. Nate Iverson, Siena Heights University (Adrian, MI), MAT282, Spring
-  2026.
+<li>Prof. Nate Iverson, Siena Heights University (Adrian, MI), MAT282, Spring 2026.
+<li>Prof. Kate Ponto, University of Kentucky, MA 214, Spring 2026.
 </ul>
 
 <p>
