--- a/diffyqs/index.html
+++ b/diffyqs/index.html
@@ -627,8 +627,8 @@ same (that is, as long as you use at least one of the two licenses).
 
 <ul class=nojustify>
 <li><a href="https://www.jirka.org/ra/">My other free undergraduate textbook: Basic Analysis: In&shy;tro&shy;duc&shy;tion to Real Analysis</a>
-<li><a href="ca/">My graduate textbook: Cultivating Complex Analysis</a>
-<li><a href="scv/">My graduate textbook: Tasty Bits of Several Complex Va&shy;ri&shy;ables</a>
+<li><a href="../ca/">My graduate textbook: Cultivating Complex Analysis</a>
+<li><a href="../scv/">My graduate textbook: Tasty Bits of Several Complex Va&shy;ri&shy;ables</a>
 <li><a href="https://en.wikipedia.org/wiki/Differential_equation">Differential equation - Wikipedia, the free encyclopedia</a>
 <li><a href="http://aimath.org/textbooks/approved-textbooks/">List of approved free textbooks from the Amer&shy;i&shy;can Ins&shy;ti&shy;tute of Math&shy;e&shy;ma&shy;tics</a>
 <li><a href="http://people.math.gatech.edu/~cain/textbooks/onlinebooks.html">Online Math&shy;e&shy;ma&shy;tics Text&shy;books</a>
