Update some links

--- a/ca/index.html
+++ b/ca/index.html
@@ -287,7 +287,7 @@ A good pre-requisite, undergraduate analysis (also a free online textbook).
 <br>
 A minicourse on several complex variables which focuses on the use of Hermitian forms in CR geometry.
 <li>
-<a href="https://www.jirka.org/diffyqs/">Notes on Diffy Qs: Differential Equations for Engineers</a>
+<a href="../diffyqs/">Notes on Diffy Qs: Differential Equations for Engineers</a>
 <br>
 Yet another free textbook.  A bit less related ...
 <li>
