--- a/scv/index.html
+++ b/scv/index.html
@@ -253,7 +253,7 @@ A minicourse on SCV and the use of Hermitian forms in CR geometry.
 Another free textbook of mine: an undergraduate analysis course.
 </span>
 <li><span class=nojustify>
-<a href="https://www.jirka.org/diffyqs/">Notes on Diffy Qs: Differential Equations for Engineers</a>
+<a href="../diffyqs/">Notes on Diffy Qs: Differential Equations for Engineers</a>
 <br>
 Yet another free textbook of mine: undergraduate differential equations.  Not really related :)...
 </span>
